<resources>
    <string name="app_name">NineCommunity</string>
    <string name="loading">加载中&#8230;</string>
    <string name="request_data">请求网络数据</string>
    <string name="update_app_msg">版本更新&#8230;</string>
    <string name="update_confirm">下载更新</string>
    <string name="app_update_tips">正在更新数据:(%d%%)</string>
    <string name="true_btn">确定</string>
    <string name="confirm_btn">确认</string>
    <string name="cancel_btn">取消</string>
    <string name="mine_title">我的</string>
    <string name="copy_title">复制</string>
    <string name="login_none">未登录</string>
    <string name="invite_code">邀请码：%s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="forget_blank_password">forget password</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_verification_hint">请输入验证码</string>
    <string name="verification_code">验证码</string>
    <string name="login_tv_tips">登录</string>
    <string name="login_pwd">账号密码登录</string>
    <string name="hint_login_pwd_input">请输入密码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_phone_code">短信验证码登录</string>
    <string name="select_album">本地相册</string>
    <string name="select_camera">拍照</string>
</resources>
